k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina-people-service
  labels:
    name: oficina-people-service
    app: oficina
