k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-people-service
  namespace: people-service
  labels:
    app: oficina-people-service
spec:
  - name: oficina-people-service
    image: ${DOCKER_REGISTRY}/oficina-people-service:latest
    ports:
      - containerPort: 8081
    resources:
      requests:
        memory: "256Mi"
    livenessProbe:
      httpGet:
        path: /actuator/health
        port: 8081
      initialDelaySeconds: 30
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /actuator/health
        port: 8081
      initialDelaySeconds: 20
      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: oficina-people-service
  namespace: people-service
spec:
  type: ClusterIP
  selector:
    app: oficina-people-service
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
---
apiVersion: v1
kind: Namespace
metadata:
  name: people-service
