k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-service
  namespace: oficina-people-service
  labels:
    app: people-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: people-service
